Build pr and deploy master via travis-ci (#7)
* Build master only for travis-ci

* Deploy on merge to master via travis-ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
 language: node_js
 node_js:
   - 12
+branches:
+  only:
+    - master
+deploy:
+  provider: script
+  script : npm run html; npm run deploy
+  on:
+    branch: master
