--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ branches:
 install:
   - npm install
 deploy:
-  skip_cleanup: false
+  skip_cleanup: true
   before_deploy: ./scripts/build.sh
   provider: s3
   access_key_id: AKIASJAEFDVK5EEVZ2EW
