--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "homepage": "https://github.com/martymcflywa/resume#readme",
   "devDependencies": {
     "aws-sdk": "2.512.0",
-    "jsonresume-theme-spartan": "0.2.1",
+    "jsonresume-theme-spartan": "^0.2.1",
     "resume-cli": "1.2.7"
   },
   "dependencies": {}
