--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   "devDependencies": {
     "aws-sdk": "2.783.0",
     "jsonresume-theme-spartan": "0.3.0",
-    "resume-cli": "2.0.0"
-  },
-  "dependencies": {}
+    "resume-cli": "^2.0.0"
+  }
 }
